ephy-embed-shell: add a ::web-view-created signal

Emitted every time we create an EphyWebView anywhere. This will be
useful in our tests.

https://bugzilla.gnome.org/show_bug.cgi?id=695300