embed/ephy-web-view.c
@@ -1284,10 +1284,11 @@ ephy_web_view_constructed (GObject *object)
    * have both enabled at the same time in WebKit now (although our
    * API does not reflect this atm). See r67274 in WebKit. */
 #ifndef HAVE_WEBKIT2
-
   /* This is the default behaviour in WebKit2 */
   webkit_web_view_set_full_content_zoom (WEBKIT_WEB_VIEW (object), TRUE);
 #endif
+
+  g_signal_emit_by_name (ephy_embed_shell_get_default (), "web-view-created", object);
 }
 
 static void
